# hatch-build-scripts

./: .copier-answers.yml  LICENSE  LICENSE.txt  README.md  dev.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue-form.yml
.github/workflows/: .hatch-run.yml  check.yml  docs.yml  publish.yml  release.yml
docs/: gen_reference.py  mkdocs.yml
docs/src/: conduct.md  contributing.md  index.md
hatch_build_scripts/: hooks.py  plugin.py
src/hatch_build_scripts/: __init__.py  plugin.py  py.typed
tests/: test_plugin.py  utils.py
